# minecloud

./: .dockerignore  .gitignore  README.md  bootstrap.sh  get-eip.py  go.mod  go.sum  release-backup.sh  release-command.sh  release-server-wrapper.sh  release-singleton.sh  remote-bootstrap.sh  remote-stdout.sh  server-wrapper.Dockerfile  spin-down.sh  spin-up.sh
cmd/minecloud/: main.go  smartflags.go
cmd/serverwrapper/: basic_test.go  main.go  savetask.go  snapshottask.go  stoptask.go  task.go  utils.go  wrapper.go
lambdas/backup/: main.go
lambdas/command/: main.go
lambdas/fastanvil/: Cargo.toml  build-to-zip.sh
lambdas/fastanvil/src/: main.rs  palette.rs  renderer.rs
lambdas/region-render/: .gitignore  Cargo.toml  build-to-zip.sh  publish.sh
lambdas/region-render/src/: main.rs  renderer.rs
lambdas/singleton/: main.go
pkg/awsdetail/: backup.go  constants.go  detail.go  init.go  invokerlambda.go  scripts.go  scripts_test.go  servers.go
pkg/functions/: backup.go  command.go  invoker.go  invokerlambda.go  invokerlocal.go  singleton.go  ssh.go
pkg/mcaws/: minecloud.go
pkg/minecloud/: aws.go  constants.go  interface.go  minecloud.go  servers.go  ssh.go
pkg/serverwrapper/: mem.go  mem_test.go  models.go
s3-base/: init.sh  reupload.sh  run.sh
system_tests/wrapper/: wrapper_test.go
ui/: .gitignore  index.html  package-lock.json  package.json  webpack.config.js
ui/src/: app.js  proto-page.js
