[package]
name = "fastanvil"
version = "0.1.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
simple_logger = "1.11"
simple-error = "0.2.2"
log = "0.4.11"
aws_lambda_events = "0.3.1"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
tokio = "0.2"
fastanvil = "0.14"
flate2 = "1.0"
image = "0.23"
tar = "0.4"

# required to allow building the lambda with muslma
openssl = { version = "0.10", features = ["vendored"] }