[package]
name = "region_render"
version = "0.1.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.3.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
simple_logger = "1.11"
simple-error = "0.2.2"
log = "0.4.11"
aws_lambda_events = "0.4.0"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
tokio = "1.4"
fastanvil = {version = "0.18", path = "../../../fastnbt/fastanvil" }
flate2 = "1.0"
image = "0.23"
tar = "0.4"
regex = "1"

# required to allow building the lambda with muslma
openssl = { version = "0.10", features = ["vendored"] }
